kubernetes/ingress/agro-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agro-ingress
  namespace: agro-drones
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
